OneDrive/Desktop/DevOps_Projects/Balli_ws/terraform_code/V1-ec2.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "demo-server" {
    ami = "ami-022e1a32d3f742bd8"
    instance_type = "t2.micro"
    key_name = "devopskey"
}
